get data of pdf and excel with filters saved by user and fix pdf overlapping issue and save filter type in order tracker

--- a/modules/purchase/assets/css/order_tracker_pdf.css
+++ b/modules/purchase/assets/css/order_tracker_pdf.css
@@ -1,6 +1,7 @@
 .table * {
-    font-size: 9px !important; /* Force 10px font size */
-    line-height: 11px !important; /* Slightly reduced line height */
+    font-size: 10px !important; /* Force 10px font size */
+    /* line-height: 11px !important;  */
+	/* Slightly reduced line height */
 }
 .table {
     table-layout: fixed !important;
